<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/movie_detail_background"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:contentDescription="@string/about"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:paddingBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="95dp">


                <!--android:showImg='@{subjectsBean.images.large}'-->
                <!--声明 它是可以折叠的-->
                <!--app:layout_collapseMode="parallax"-->
                <!--视差因子) - 设置视差滚动因子，值为：0~1。-->
                <!--app:layout_collapseParallaxMultiplier="0.7"-->
                <ImageView
                    android:id="@+id/movie_detail_image"
                    android:layout_width="@dimen/movie_detail_width"
                    android:layout_height="@dimen/movie_detail_height"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/about"
                    android:scaleType="fitXY" />

                <!--评分-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/movie_detail_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:text="评分："
                            android:textColor="@color/colorRateRed" />

                        <TextView
                            android:id="@+id/movie_detail_score_people"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text='人评分'
                            android:textColor="@color/colorWhite" />

                    </LinearLayout>

                    <!--导演-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="导演："
                                android:textColor="@color/colorWhite" />

                            <View
                                android:layout_width="28dp"
                                android:layout_height="2dp"
                                android:layout_marginTop="2dp"
                                android:background="@color/colorTheme" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/movie_detail_directors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textColor="@color/colorWhite" />
                    </LinearLayout>

                    <!--主演-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="主演："
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/movie_detail_performer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textColor="@color/colorWhite" />

                    </LinearLayout>

                    <!--类型-->
                    <TextView
                        android:id="@+id/movie_detail_genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:textColor="@color/colorWhite" />

                    <!--上映日期-->
                    <TextView
                        android:id="@+id/movie_detail_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:text="上映日期："
                        android:textColor="@color/colorWhite" />

                    <!--制片国家/地区-->
                    <TextView
                        android:id="@+id/movie_detail_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:lines="2"
                        android:text="制片国家/地区："
                        android:textColor="@color/colorWhite" />


                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <!--加载失败-->
        <LinearLayout
            android:id="@+id/ll_error_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@+id/image_error"
                android:src="@drawable/load_err" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/loading_failed"
                android:textSize="15sp" />
        </LinearLayout>

        <!--加载中..-->
        <LinearLayout
            android:id="@+id/ll_loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/image_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@+id/image_loading"
                android:src="@drawable/yun_anim" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="5dp"
                android:text="@string/loading"
                android:textColor="@color/colorTabText"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movie_detail_fragment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <View
                    android:layout_width="2dp"
                    android:layout_height="18dp"
                    android:background="@color/colorTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="另称"
                    android:textColor="@color/colorContent"
                    android:textSize="17sp" />

            </LinearLayout>

            <!--又名-->
            <TextView
                android:id="@+id/movie_detail_another_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="@color/colorTitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <View
                    android:layout_width="2dp"
                    android:layout_height="18dp"
                    android:background="@color/colorTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="剧情简介"
                    android:textColor="@color/colorContent"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/movie_detail_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="7dp"
                android:padding="12dp"
                android:textColor="@color/colorTitle"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <View
                    android:layout_width="2dp"
                    android:layout_height="18dp"
                    android:background="@color/colorTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="导演 &amp; 演员"
                    android:textColor="@color/colorContent"
                    android:textSize="17sp" />

            </LinearLayout>

            <!--导演&演员-->
            <com.github.chengheaven.heaven.customer.XRecyclerView.XRecyclerView
                android:id="@+id/movie_detail_performer_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>